# metricraft

./: .gitignore  CMakeLists.txt  Makefile  README copy.md  README.md  note.md
dosc/python_bind/: cpu_py.yaml  cpu_pybind.py
plugins/: cpu.yaml
plugins/cpu/: cpu_exec.py
src/: exec_runner.hpp  main.cpp  manifest.hpp  metrics.hpp  plugin.hpp  scheduler.hpp
